--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,171 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #132a13;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+img.card {
+	width: 70px;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	vertical-align: initial;
+	box-sizing: initial;
+}
+
+/*
+ * A hand is a div containing cards.
+ */
+.hand {
+	padding: 0;
+	margin: 0;
+}
+.active-hand img.card { 
+	cursor: pointer;
+}
+
+/*
+ * A horizontal hand, class="hand hhand".  The enitire card is visible.
+ */
+.hhand {
+	display: inline-block; 
+}
+.hhand img.card { 
+	padding-top: 10px;
+}
+.hhand.active-hand img.card:hover { 
+	padding-top: 0px;
+	padding-bottom: 10px;
+}
+
+.player1 .hhand.active-hand img.card:hover { 
+	padding-top: -10px;
+	padding-bottom: 0px;
+}
+/*
+ * A vertical hand, class="hand vhand".  The enitire card is visible.
+ */
+.vhand {
+	display: block; 
+}
+.vhand img.card { 
+	padding-right: 10px;
+}
+.vhand.active-hand img.card:hover { 
+	padding-right: 0px;
+	padding-left: 10px;
+}
+
+/*
+ * A compact horizontal hand.  Only the last card is entirely visible.
+ */
+.hhand-compact { 
+	display: inline-block; 
+}
+.hhand-compact img.card:first-child { 
+	margin-left: 0px;
+	padding-top: 10px;
+}
+.hhand-compact img.card { 
+	margin-left: -52px;
+	padding-top: 10px;
+}
+.hhand-compact.active-hand img.card:hover { 
+	padding-top: 0px;
+	padding-bottom: 10px;
+}
+.player1 .hhand-compact.active-hand img.card:hover{ 
+	padding-top: 0px;
+	padding-bottom: -10px;
+}
+
+/*
+ * A compact vertical hand.  Only the last card is entirely visible.
+ */
+.vhand-compact {
+	display: inline-block;
+	vertical-align: top;
+}
+.vhand-compact img.card:first-child { 
+	display: block; 
+	margin-top: 0px;
+	padding-right: 10px;
+}
+.vhand-compact img.card 
+{
+	display: block; 
+	margin-top: -80px;
+	padding-right: 10px;
+}
+.vhand-compact.active-hand img.card:hover,
+.active-hand .vhand-compact img.card:hover { 
+	display: block; 
+	padding-right: 0px;
+	padding-left: 10px;
+}
+
+/*
+ * A fanned hand.  Only the last card is entirely visible.
+ */
+.fan {
+	display: inline-block;
+	vertical-align: top;
+	position: relative;
+	padding-bottom: 1em;
+}
+.fan img.card { 
+	position: absolute;
+	width: 90px;
+}
+
+.board {
+  display: grid;
+  grid-template-rows: 300px 300px 300px;
+  grid-template-columns: 300px 300px 300px;
+}
+
+.board .player1 {
+  grid-column: 2/3;
+}
+
+.board .player2 {
+  grid-row: 2/3;
+  grid-column: 3/4;
+}
+
+.board > .player2 {
+  flex-direction: column;
+  display: flex;
+  align-items: flex-end;
+}
+
+.board .player3 {
+  grid-column: 2/3;
+  grid-row: 3/4;
+}
+
+.board > .player3 {
+  display: flex;
+  align-items: flex-end;
+}
+
+.board .player4 {
+  grid-column: 1/2;
+}
+
+.pile {
+  grid-column: 2/3;
+  grid-row: 2/3;
+  display: grid;
+  grid-template-rows: 100px 100px 100px;
+  grid-template-columns: 100px 100px 100px;
+}
+
+.pile .player3 .fan {
+  padding-bottom: 0;
 }
